# iliayar

./: .gitignore  Anime.html  Jenkinsfile  README.md  docker-compose.yml  index.html  log.php
.uci/: actions.yaml  hakyll_pipeline.yaml  pipelines.yaml  project.yaml  publish_pipeline.yaml  services.yaml
builder/: .gitignore  flake.nix
builder/conspects/: Main.hs  site.cabal
builder/lib/: default.nix  site-lib.cabal
builder/lib/src/: Site.hs
builder/lib/src/Site/: Compiler.hs  Context.hs  Filters.hs  LatexCompiler.hs  OrgToPdfCompiler.hs  PandocWithFilename.hs  Rules.hs  TypstCompiler.hs  Utils.hs
builder/lib/src/Site/Context/: TableOfContent.hs  Utils.hs
builder/lib/src/Site/Filters/: Code.hs  Links.hs
builder/lib/src/Site/Rules/: CopyExternal.hs
builder/lib/tests/: Tests.hs
builder/main/: Main.hs
builder/org-to-pdf/: default.nix  init.el  preamble.sty  script.el
css/: anime.css  edved.css  index.css
js/: index.js  main.js
org-publish/: Dockerfile  packages.el  run.sh  with-js.Dockerfile
org-publish/config/: init.el  preamble.sty
public/: .gitignore  Edved.html  archive.html  archive.org  download_vid.sh  index.html  index.org  log.php  old.html  other-test.org  rss.org  test.org
public-old/: index.html
public-old/js/: main.js
public-old/media/: back.sh
public-old/notes/: about.org  blog.org  index.org  level-0.org
public-old/utils/: bsd_converter.html
public/about/: brief.org  index.org
public/blog/: brief.org  index.org  (+1 more)
speedtest/: Dockerfile  README.org  docker-compose.yml  download_speedtest_cli.sh  requirements.txt
(+138 files in other folders)
